<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">茶</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="saving_to_sd_please_wait">Saving…</string>
    <string name="successfully_saved_to">Picture saved to "%s"</string>
    <string name="save_error">Save error</string>
    <string name="please_wait">Please wait…</string>
    <string name="sd_card_is_not_available">SD card is not available</string>
    <string name="send_image_to">Send Image To:</string>

    <!-- Confirm dialog -->
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure that you want to clear the canvas?</string>

    <!-- Menu -->
    <string name="brushes">Brushes</string>
    <string name="color">Color</string>
    <string name="clear">Clear</string>
    <string name="send">Share</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <!-- Submenu -->
    <string name="grid">Grid</string>
    <string name="circles">Circles</string>
    <string name="ribbon">Ribbon</string>
    <string name="squares">Squares</string>
    <string name="web">Web</string>
    <string name="longfur">Longfur</string>
    <string name="fur">Fur</string>
    <string name="chrome">Chrome</string>
    <string name="shaded">Shaded</string>
    <string name="simple">Simple</string>
    <string name="sketchy">Sketchy</string>
    <string name="eraser">Eraser</string>

    <!-- Picker dialog -->
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <!-- About dialog -->
    <string name="about_title">Sketcher 茶 (Cha)</string>
    <string name="about_text">        Source code at &lt;a href="https://github.com/dkovalkov/Sketcher-Tab"&gt;GitHub&lt;/a&gt;.
        &lt;a href="mailto:topoltop@gmail.com"&gt;topoltop@gmail.com&lt;/a&gt;&lt;p&gt;</string>
    <string name="opacity">Opacity</string>
    <string name="size">Size</string>
    
    <string name="share">分享</string>

</resources>