<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/menu_undo"
        android:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/undo"/>
    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/menu_redo"
        android:showAsAction="always"
        android:orderInCategory="101"
        android:title="@string/redo"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:orderInCategory="102"
        android:title="@string/save"/>
    <item
        android:id="@+id/menu_tool"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:orderInCategory="103"
        android:title="@string/tool"/>
    <item
        android:id="@+id/menu_send"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="104"
        android:title="@string/send"/>
    <item
        android:id="@+id/menu_clear"
        android:showAsAction="always"
        android:orderInCategory="105"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/clear"/>

</menu>